--- a/index.html
+++ b/index.html
@@ -1,1 +1,4 @@
+[Футрак Софія Тарасівна ]
+Народилася в Івано-Франківській обл. в селі Міжріччя. У дитинстві(з 6 років) мені подобались танці, тому мама мене віддала на танці. Займалась танцями майже 2 роки.
+І пізніше пішла у музичну школу на іструмент " Бандура " навчалась там 6 років! І ось після 11 класу, я почала задумуватись, на яку саме спеціальність мені іти. 
 
