--- a/nowadays.html
+++ b/nowadays.html
@@ -1,1 +1,14 @@
-
+                           "Сьогодення [Футрак Софія Тарасівна
+"Назад на головну"
+Заголовок"Мій список покупок"
+Молочні продукти:
+Молоко
+Сметана 
+Масло
+        "Мій улюблений десерт"
+Приготування тісто:
+Закинути 0.5 кг борошна
+Додати 3 яйця 
+Додати склянку молока
+Додати півсклянк цукру
+Перемішати 
