--- a/nowadays.html
+++ b/nowadays.html
@@ -1,6 +1,6 @@
-                           "Сьогодення [Футрак Софія Тарасівна
+                           "Сьогодення [Футрак Софія Тарасівна]
 "Назад на головну"
-Заголовок"Мій список покупок"
+Заголовок"Мій типовий список покупок"
 Молочні продукти:
 Молоко
 Сметана 
@@ -10,5 +10,5 @@
 Закинути 0.5 кг борошна
 Додати 3 яйця 
 Додати склянку молока
-Додати півсклянк цукру
+Додати півсклянки цукру
 Перемішати 
