--- a/friends.html
+++ b/friends.html
@@ -1,4 +1,10 @@
         " Друзі [Футрак Софія Тарасівна]"
 "Назад на головну"
 "Мої друзі"
+Прізвище  Ім’я  	Дата народження 	Адреса проживання	Контактний телефон
+Бойко	  Адріана   	    14.06.04	         Вул. Бандери	            0768443554
+Галин	  Світлана	    05.06.06	       Вул. Коновальця  	    0342636475
+Петришин   Ігор	            06.12.04	     Вул. Лесі Українки	            0345328666
+Сенків	 Ангеліна	    12.03.05	       Вул. Симоненка	            0564738563
+
 
