--- a/biography.html
+++ b/biography.html
@@ -2,6 +2,8 @@
 "Назад на головну"
 "Зміст"
 "Базова інформація"
+Я Футрак Софія Тарасівна! мені 17 років, народилася 10 липня 2006 року в Івано-Франківській області у селі Міжріччя. Здобула повну загальну середню освіту в Міжрічанському ліцеї.
+                        Зараз навчаюсь у Прикарпатському  університеті імені Василя Стефаника.
 "Дитинство"
 "Шкільні роки"
 " Поза школою"
