--- a/biography.html
+++ b/biography.html
@@ -5,6 +5,10 @@
 Я Футрак Софія Тарасівна! мені 17 років, народилася 10 липня 2006 року в Івано-Франківській області у селі Міжріччя. Здобула повну загальну середню освіту в Міжрічанському ліцеї.
                         Зараз навчаюсь у Прикарпатському  університеті імені Василя Стефаника.
 "Дитинство"
+ Своє дитинство я згадую з особливою теплотою і радістю.
+      У ранньому дитинстві, коли мені було всього п’ять чи шість років, я хотіла швидше стати дорослою.
+       Я була дуже активна дитина. З татом  їхала подорожувати по всій Україні. Найбільше мені сподобався Буковель і Львів. Проводила багато часу з молодшими сестрами та з молодшим братом.
+          Багато співала, любила дивитись мультфільми.
 "Шкільні роки"
 " Поза школою"
 "Університет"
