--- a/biography.html
+++ b/biography.html
@@ -10,5 +10,8 @@
        Я була дуже активна дитина. З татом  їхала подорожувати по всій Україні. Найбільше мені сподобався Буковель і Львів. Проводила багато часу з молодшими сестрами та з молодшим братом.
           Багато співала, любила дивитись мультфільми.
 "Шкільні роки"
+Коли пішла перший раз до школи, мені школа дуже сподобалась. Я мала охоту вчити предмети такі як ( математика, інформатика, музичне митецтво і тд.),але найбільше мені подобалась англійська мова. 
+                                Мені подобалось вчити нові слова, перекладати тексти з англійської на українську. Також брала активну участь у різних конкурсах по цьому предметі. У 2 класі я нарешті виграла приз, якому була дуже рада.
+                                Виступала. Була ведучою в англомовній казці. Я не хотіла, щоб був останній дзвонник, тому що в школі було весело.
 " Поза школою"
 "Університет"
