--- a/biography.html
+++ b/biography.html
@@ -14,4 +14,7 @@
                                 Мені подобалось вчити нові слова, перекладати тексти з англійської на українську. Також брала активну участь у різних конкурсах по цьому предметі. У 2 класі я нарешті виграла приз, якому була дуже рада.
                                 Виступала. Була ведучою в англомовній казці. Я не хотіла, щоб був останній дзвонник, тому що в школі було весело.
 " Поза школою"
+Перейшовши в 2 клас, я пішла на танці. Танцювала майже 2 роки. Пізніше мене зацікавила музика, і пішла вчитись на музику. Вибір інструмента для мене був легкий. 
+                                    Батьки хотіли мене віддати на фортепіано але я настоювала, що хочу саме на інструмент Бандура.  Пізніше я хотіла йти на малювання, але я бачила, що в мене немає часу на ще одну спеціальність, тому займалась музикою.
+                                    Вчилась 6 років. Також записалась в церковний хор "Промінь любові ", і наданий час в ньому співаю.
 "Університет"
