--- a/biography.html
+++ b/biography.html
@@ -18,3 +18,8 @@
                                     Батьки хотіли мене віддати на фортепіано але я настоювала, що хочу саме на інструмент Бандура.  Пізніше я хотіла йти на малювання, але я бачила, що в мене немає часу на ще одну спеціальність, тому займалась музикою.
                                     Вчилась 6 років. Також записалась в церковний хор "Промінь любові ", і наданий час в ньому співаю.
 "Університет"
+Після закінчення повної загальної середньої освіти, я почала задумуватись куди мені йти вчитись і на яку спеціальність.  
+                 Мені порекомендувала вчителька з додаткового йти саме на професію пов'язаною з айті.
+  І я почала шукати професію пов'язану з математикою та інформатикою, і зацікавила мене спеціальність: "комп'ютерні науки". Обрала я саме Прикарпатський університет імені Василя Стефаника за хорошими відгуками та за рекомендацією старших студентів
+ "До змісту"
+ "Уверх"
