--- a/Gallery.html
+++ b/Gallery.html
@@ -1,3 +1,8 @@
 "Галерея Футрак Софії Тарасівни"
 "Назад на головну"
-"Мої друзі"
+"Мої зображення"
+"Зображення у цій папці"
+"Зображення у папці"
+"Зображення онлайн"
+
+
