--- a/Practic-1/Nowadays.html
+++ b/Practic-1/Nowadays.html
@@ -46,6 +46,13 @@
 Додаємо вівсяні пластівці 
 Змішуємо до однорідності
 
+Включити духовку
+Залити тісто в форму
+Покласти на випіканняна 15 хв
+Вийняти корж
+Прикрасити торт
+
+
 
 
 
