--- a/Practic-2/nowadays.html
+++ b/Practic-2/nowadays.html
@@ -95,7 +95,7 @@
               </ol>
       </li>
       <li>Включити духовку</li>
-      <li>Залити тісто в тасу</li>
+      <li>Залити тісто в форму</li>
       <li>Покласти на випікання на 15хв</li>
       <li>Вийняти корж</li>
       <li>Прикрасити торт</li>
