--- a/Practic-2/index.html
+++ b/Practic-2/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web-Design</title>
+    <meta charset="utf-8">
+    <title>Персональна сторінка</title>
 </head>
 <body>
-    <h1>Персональна сторінка Футрак Софія Тарасівна </h1>
-    <p> Я Футрак Софія Тарасівна! Народилася в Івано-Франківській обл. в селі Міжріччя. У дитинстві(з 6 років) мені подобались танці, тому мама мене віддала на танці. Займалась танцями майже 2 роки.
-        І пізніше пішла у музичну школу на іструмент " Бандура " навчалась там 6 років! І ось після 11 класу, я почала задумуватись, на яку саме спеціальність мені іти. І мені порадили йти саме на спеціальність"Компютерні науки122"  <p>
-    <div><a href="biography.html" title="Біографія">Біографія</a></div>
-    <div><a href="novadays.html" title="Сьогодення">Сьогодення</a></div>
-    <div><a href="friends.html" title="Друзі">Друзі</a></div>
-    <div><a href="gallery.html" title="Галерея">Галерея</a></div>
+<h1>Персональна сторінка Футрак Софії Тарасівни</h1>
+<p>  Я Футрак Софія Тарасівна! Народилася в Івано-Франківській обл. в селі Міжріччя. У дитинстві(з 6 років) мені подобались танці, тому мама мене віддала на танці. Займалась танцями майже 2 роки.
+    І пізніше пішла у музичну школу на іструмент " Бандура " навчалась там 6 років! І ось після 11 класу, я почала задумуватись, на яку саме спеціальність мені іти. І мені порадили йти саме на спеціальність"Компютерні науки122"  
+</p>
+<ul>
+<li><a href="biography.html" target="_blank">Автобіографія</a></li>
+<li><a href="nowadays.html" target="_blank">Сьогодення</a></li>
+<li><a href="friends.html" target="_blank">Друзі</a></li>
+<li><a href="gallery.html" target="_blank">Галерея</a></li>
+
+</ul>
 </body>
 </html>
