--- a/Practic-1/Friends.html
+++ b/Practic-1/Friends.html
@@ -2,10 +2,10 @@
 "Назад на головну"
 "Мої друзі"
 Прізвище	  Ім’я	     Дата народження	Адреса проживання      	Контактний телефон
-Синишин  	Анастасія	    16.04.2005	      Вул. Шевченка         	+38067974355
-Руй    	Владислав	      21.07.2005	      Вул. Петрушевич       	+380533956399
-Галин   	Віталій     	10.03.2005	       Вул. Стефаника	         +380922589440
-Федорович	 Денис   	    09.12.2006         	Вул. Питлюри          	+380937793959
+Синишин  	Влад    16.04.2005	      Вул. Шевченка         	+38067974355
+Кондрат   Марія      21.07.2005	      Вул. Петрушевич       	+380533956399
+Федорович Аня    	10.03.2005	       Вул. Стефаника	         +380922589440
+Василюк Аліна	    09.12.2006         	Вул. Сухомлинського         	+380937793959
 
 
 
